argocd/istio-demo/todos-api/deployment.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  labels:
    app: microservice-app-example
  name: todos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: todos-api
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: microservice-app-example
        service: todos-api
        version: v1
    spec:
      containers:
      - env:
        - name: JWT_SECRET
          value: myfancysecret
        - name: TODO_API_PORT
          value: "8082"
        - name: REDIS_HOST
          value: redis-queue
        - name: REDIS_PORT
          value: "6379"
        - name: REDIS_CHANNEL
          value: log_channel
        - name: ZIPKIN_URL
          value: http://zipkin:9411/api/v2/spans
          
        image: image-registry.openshift-image-registry.svc:5000/laboratorio/todos-api:1.0.0
        name: todos-api
        ports:
        - containerPort: 8082
        imagePullPolicy: Always
      restartPolicy: Always
