argocd/istio-demo/todos-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
    version: v1
  name: todos-api
spec:
  ports:
  - port: 8082
  selector:
    service: todos-api
